# treble-cli

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
.claude-plugin/ui/: CLAUDE.md  hooks.json
.claude-plugin/ui/commands/: cms-wp.md  cms.md  compare.md  dev.md  plan.md  show.md  tree.md
.claude-plugin/ui/skills/: cms-prismic.md  cms-sanity.md  cms-wp.md  dev-basecoat-wp.md  dev-shadcn.md
.github/workflows/: ci.yml  release.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
scripts/: postinstall.js  update-version.js
src/: main.rs
src/commands/: show.rs
