[package]
name = "treble"
version = "1.1.0"
edition = "2021"
description = "Figma-to-code CLI — plan, implement, compare"
authors = ["treble.build"]

[[bin]]
name = "treble"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
thiserror = "2"
anyhow = "1"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
crossterm = "0.28"
